empty data component, resources small fixes

--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -12,3 +12,4 @@
 @import './Calendar/AddCalendarEvent.scss';
 @import './Fields/fields.scss';
 @import './Menu/index.scss';
+@import './EmptyData/EmptyData.scss'
