--- a/src/components/Resources/Resources.module.css
+++ b/src/components/Resources/Resources.module.css
@@ -76,13 +76,14 @@
     cursor: pointer;
 }
 .wrap__cards{
-    height: max-content;
     display: flex;
     flex-direction: column;
     border: solid 1px var(--second-color);
     border-radius: 11px;
 }
 .inner__cards{
+    max-height: 500px;
+    overflow-y: auto;
     padding: 10px;
     margin: auto;
     display: flex;
