--- a/src/assets/pages/LoginPage.scss
+++ b/src/assets/pages/LoginPage.scss
@@ -6,15 +6,9 @@
     flex-direction: column;
     gap: 20px;
     &-switch {
-        cursor: pointer;
         color: $default-color-primary-text;
         font-weight: 600;
-        &.active {
-            color: goldenrod;
-        }
-        &:hover{
-            color: $main-color;
-        }
+        font-size: 24px;
     }
     &-form {
         display: flex;
