--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -13,3 +13,4 @@
 @import "./Pagination/Pagination.scss";
 @import "./HeaderFormatter/HeaderFormatter.scss";
 @import "./Uploaders/LoadingPage.scss";
+@import './Buttons/buttons.scss'
