--- a/src/assets/components/Settings/SettingsPage.scss
+++ b/src/assets/components/Settings/SettingsPage.scss
@@ -6,5 +6,12 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+        &-jcs {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-right: 20px;
+        }
     }
 }
