delete note, plan, helps, translation
notes doesn't work

--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -35,8 +35,8 @@ div {
 .default-icon{
 color: $main-color;
 }
-.close-icon{
-    color: red;
+.delete-icon{
+    color: #8f0101;
     cursor: pointer;
 
 }
