--- a/src/assets/components/Groups/Group/Group.scss
+++ b/src/assets/components/Groups/Group/Group.scss
@@ -115,6 +115,7 @@
         &-member{
             flex-direction: column;
             gap: 5px;
+            text-align: center;
         }
     }
 }
