--- a/src/assets/components/Cases/Case/Help.scss
+++ b/src/assets/components/Cases/Case/Help.scss
@@ -122,7 +122,12 @@
     }
     .Help-title-panel{
         div{
-            font-size: 16px;
+            font-size: 12px;
         }
+    }
+    .Help-content-element .str-date .dates-start{
+        flex-direction: column;
+        align-items: start;
+        gap: 5px !important;
     }
 }
