--- a/src/assets/components/Settings/SettingsPage.scss
+++ b/src/assets/components/Settings/SettingsPage.scss
@@ -13,5 +13,16 @@
             justify-content: space-between;
             padding-right: 20px;
         }
+        &-body{
+            word-break: break-all;
+        }
+    }
+}
+@media screen and (max-width: 600px){
+    .SettingsPage-accordion-jcs{
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+
     }
 }
