--- a/src/components/Settings/settings.css
+++ b/src/components/Settings/settings.css
@@ -320,6 +320,7 @@ input[type="color"]{
     }
     .set__user__wr{
         flex-direction: column;
+        gap: 7.5px;
     }
     .set__users__data__title{
         display: none;
