--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -110,3 +110,6 @@ color: $main-color;
 .css-hlbajn-MuiRating-label {
     color: $main-color;
 }
+.table-active{
+    background-color: rgb(215, 244, 215);
+}
