--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -3,7 +3,7 @@
 @import './CheckBoxes/CheckboxListAccess.scss';
 @import './Notifications/notifications.scss';
 @import './Uploaders/FilesUploader.scss';
-@import './Inputs/Input.scss';
+@import './Inputs/SearchInput.scss';
 @import './Uploaders/PhotoUploader.scss';
 @import './Selects/SelectAccess.scss';
 @import "./TextEditor/TextEditor.scss";
