--- a/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
+++ b/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
@@ -54,6 +54,7 @@
         }
         &-title{
             font-weight: bold;
+            word-break: break-all;
             font-size: 26px;
             padding: 10px;
         }
