input width fixes, hide phones/emails and many different things

--- a/src/assets/components/Cases/Case/Notes.scss
+++ b/src/assets/components/Cases/Case/Notes.scss
@@ -70,6 +70,7 @@
             }
             &-mess{
                 width: 100%;
+                height: max-content;
                 display: flex;
                 justify-content: space-between;
                 &-edit{
