--- a/src/assets/pages/AncetsPage.scss
+++ b/src/assets/pages/AncetsPage.scss
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  &-modal{
+    &-questions{
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 }
