--- a/src/assets/components/Groups/GroupConnections.scss
+++ b/src/assets/components/Groups/GroupConnections.scss
@@ -37,7 +37,7 @@
 
     &-list {
         width: 100%;
-
+        padding: 0px 10px;
         &-item {
             width: 100%;
             padding: 10px 5px;
