--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -25,9 +25,6 @@ div {
 .w100 {
     width: 100%;
 }
-.h100{
-    height: 100%;
-}
 .grid {
     width: 100%;
     display: grid;
@@ -37,6 +34,10 @@ div {
   }
 .default-icon{
 color: $main-color;
+}
+.hide-icon{
+    font-size:18px !important;
+
 }
 .delete-icon{
     color: #8f0101;
