--- a/src/assets/elements/Notifications/MenuNotification.scss
+++ b/src/assets/elements/Notifications/MenuNotification.scss
@@ -44,6 +44,7 @@
         flex-direction: column;
         gap: 2.5px;
         font-size: 12px;
+        word-break: break-all;
         &-date{
             font-size: 10px;
             color: #818181;
