--- a/src/assets/blocks/GalleryBlock.scss
+++ b/src/assets/blocks/GalleryBlock.scss
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    h1 {
-        font-size: 20px;
+    &-title{
+        font-weight: 700;
+        font-size: 18px;
     }
     &-grid{
         display: grid;
@@ -14,7 +15,6 @@
         
         &-img-wrap{
             display: flex;
-            align-items: center;
             justify-content: center;
             height: 250px;
             img{
