--- a/src/assets/components/Groups/Group/Group.scss
+++ b/src/assets/components/Groups/Group/Group.scss
@@ -41,6 +41,7 @@
         &-title {
             display: flex;
             align-items: center;
+            justify-content: space-between;
             font-size: 18px;
             font-weight: bold;
             
