--- a/src/assets/pages/TasksPage.scss
+++ b/src/assets/pages/TasksPage.scss
@@ -11,7 +11,18 @@
     &-info {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 15px;
+        &-header{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+        }
+        &-feedbacks{
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
         &-title {
             font-weight: 600;
         }
