category edit + delete, emptyData right check, other bugs

--- a/src/components/Resources/Resources.module.css
+++ b/src/components/Resources/Resources.module.css
@@ -76,6 +76,7 @@
     cursor: pointer;
 }
 .wrap__cards{
+    height: max-content;
     display: flex;
     flex-direction: column;
     border: solid 1px var(--second-color);
