--- a/src/assets/components/Settings/ListCategories.scss
+++ b/src/assets/components/Settings/ListCategories.scss
@@ -6,9 +6,14 @@
     border: solid 3px $background-color;
     border-radius: 0 0 8px 8px;
     &--item{
-        display: grid;
-        grid-template-columns: 20px 20px 1fr;
-        gap: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &-info{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
         &-circle {
             width: 20px;
             height: 20px;
@@ -16,6 +21,10 @@
         }
         &-number {
             text-align: center;
+        }
+        &-controls{
+            display: flex;
+            gap: 10px;
         }
     }
 }
