different bug fixes, tasks pagination

--- a/src/assets/pages/TasksPage.scss
+++ b/src/assets/pages/TasksPage.scss
@@ -27,6 +27,10 @@
             font-weight: 600;
         }
     }
+    &-pagination{
+        display: flex;
+        justify-content: center;
+    }
 }
 
 @media screen and (max-width:450px){
