--- a/src/assets/components/Settings/ListCategories.scss
+++ b/src/assets/components/Settings/ListCategories.scss
@@ -9,6 +9,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 0px 5px;
         &-info{
             display: flex;
             align-items: center;
