--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -1,6 +1,6 @@
 .Table{
     width: 100%;
-    max-height: 450px;
+    height: 450px;
     overflow: auto;
     text-align: center;
     border: solid 1px #ccc;
