--- a/src/assets/blocks/GalleryBlock.scss
+++ b/src/assets/blocks/GalleryBlock.scss
@@ -18,6 +18,7 @@
             justify-content: center;
             height: 250px;
             img{
+                cursor: pointer;
                 border-radius: 10px;
                 border-radius: 10px;
                 width: 100%;
