--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -5,6 +5,7 @@
     text-align: center;
     border: solid 1px #ccc;
     border-radius: 8px;
+    font-family: 'Inter', 'Montserrat';
     &-row-menu {
         display: flex;
         align-items: center;
