--- a/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
+++ b/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
@@ -67,7 +67,7 @@
             gap: 10px;
             padding: 5px 0px;
             &-color {
-                width: 20px;
+                min-width: 20px;
                 height: 20px;
                 border-radius: 50%;
             }
