notification scroll, case page fixes and etc

--- a/src/assets/components/Fields/FieldsBlock.scss
+++ b/src/assets/components/Fields/FieldsBlock.scss
@@ -19,6 +19,8 @@
             width: max-content;
             padding: 5px;
             background-color: $second-color;
+            font-weight: 700;
+            border-radius: 5px;
         }
         &-options {
             display: grid;
