--- a/src/assets/pages/TaskPage.scss
+++ b/src/assets/pages/TaskPage.scss
@@ -54,7 +54,7 @@
             }
 
             &-text {
-                max-height: 100px;
+                min-height: 100px;
                 overflow-y: auto;
                 padding: 10px;
                 box-sizing: border-box;
