--- a/src/assets/elements/TextEditor/TextEditor.scss
+++ b/src/assets/elements/TextEditor/TextEditor.scss
@@ -4,6 +4,7 @@
       bottom: 0;
       left: 0;
       display: flex;
+      flex-direction: column;
       gap: 15px;
       margin-top: 50px;
     }
