resource table fix, translations

--- a/src/assets/pages/LoginPage.scss
+++ b/src/assets/pages/LoginPage.scss
@@ -15,9 +15,6 @@
         flex-direction: column;
         gap: 24px;
         width: 50%;
-        min-width: 400px;
-        .Input div {
-            width: 100%;
-        }
+        // min-width: 400px;
     }
 }
