--- a/src/assets/blocks/ProfilePhotoBlock.scss
+++ b/src/assets/blocks/ProfilePhotoBlock.scss
@@ -1,8 +1,8 @@
 .ProfilePhotoBlock {
     background-size: 100%;
     position: relative;
-    height: max-content;
-    width: max-content;
+    // height: max-content;
+    // width: max-content;
 
     &-hover {
         width: 100%;
@@ -19,6 +19,6 @@
         max-width: 300px;
         min-height: 250px;
         max-height: 300px;
-        object-fit: cover;
+        // object-fit: cover;
     }
 }
