--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -22,6 +22,9 @@
         color: #fff;
         border: none;
         padding: 10px;
+        td {
+            padding: 2px;
+        }
     }
     tbody{
         td{
