--- a/src/assets/pages/TaskPage.scss
+++ b/src/assets/pages/TaskPage.scss
@@ -70,10 +70,7 @@
         }
     }
 }
-@media screen and (max-width:400px){
-    .Task{
-        &-control{
-            flex-direction: column;
-        }
-    }
-}
+// @media screen and (max-width:400px){
+//     .Task{
+//     }
+// }
