--- a/src/assets/pages/EventsPage.scss
+++ b/src/assets/pages/EventsPage.scss
@@ -4,6 +4,11 @@
     flex-direction: column;
     align-items: center;
     gap: 50px;
+    &-header{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
     &-title{
         display: flex;
         align-items: center;
