--- a/src/assets/pages/Transactions.scss
+++ b/src/assets/pages/Transactions.scss
@@ -4,6 +4,11 @@
     flex-direction: column;
     align-items: center;
     gap: 25px;
+    &-header{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
     &-title{
         font-size: 25px;
         font-weight: 700;
