--- a/src/components/Home/Statistic/statistics.module.css
+++ b/src/components/Home/Statistic/statistics.module.css
@@ -1,4 +1,4 @@
-.stats__grid{
+.stats__grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
@@ -7,18 +7,30 @@
     color: #f99c9c;
     margin-top: 50px;
 }
+
 @media screen and (max-width:1020px) {
-    .stats__grid{
+    .stats__grid {
         grid-template-columns: 1fr;
     }
 }
-.amount__cases__wr > h2{
+
+.amount__cases__wr>h2 {
     text-align: center;
 }
+
 .service__statistic {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 10px;
     font-size: 12px;
     justify-content: center;
+}
+
+@media screen and (max-width:500px) {
+    .service__statistic>div {
+        flex: 0 0 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
