--- a/src/assets/blocks/ProfilePhotoBlock.scss
+++ b/src/assets/blocks/ProfilePhotoBlock.scss
@@ -1,24 +1,35 @@
 .ProfilePhotoBlock {
-    background-size: 100%;
+  width: 300px;
+  height: 300px;
+  position: relative; /* обязательно для absolute дочернего */
+  background: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+    z-index: 1;
     position: relative;
-    // height: max-content;
-    // width: max-content;
+  }
 
-    &-hover {
-        width: 100%;
-        height: 100%;
-        background-color: #00000077;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-    }
+  &-hover {
+    position: absolute;
+    inset: 0; /* top:0; right:0; bottom:0; left:0 */
+    background-color: #00000077;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.2s;
+    z-index: 2;
+    cursor: pointer;
+  }
 
-    img {
-        width: 100%;
-        max-width: 300px;
-        min-height: 250px;
-        max-height: 300px;
-        // object-fit: cover;
-    }
+  &:hover &-hover {
+    opacity: 1;
+  }
 }
