--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -115,10 +115,8 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
-
-        >div {
-            max-height: 400px;
-            overflow-y: auto;
-        }
+        padding: 10px;
+        border-radius: 7.5px;
+        box-shadow: 0px 0px 15px -10px #000;
     }
 }
