case sorting fix, english translations, bug fixes

--- a/src/assets/components/Cases/Case/Help.scss
+++ b/src/assets/components/Cases/Case/Help.scss
@@ -95,6 +95,7 @@
         gap: 8px;
         &-date {
             display: flex;
+            align-items: flex-end;
             gap: 8px;
         }
         &-status {
