--- a/src/assets/components/Cases/Case/Info/DetailedInfo.scss
+++ b/src/assets/components/Cases/Case/Info/DetailedInfo.scss
@@ -45,7 +45,7 @@
         }
         &-panel{
             display: flex;
-            gap: 5px;
+            gap: 15px;
         }
     }
 
@@ -54,8 +54,8 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-    max-height: 400px;
-    overflow-y: auto;
+    // max-height: 400px;
+    // overflow-y: auto;
 }
 @media screen and (max-width:500px){
     .DetailedInfo{
