fix and new red

--- a/src/assets/pages/TaskPage.scss
+++ b/src/assets/pages/TaskPage.scss
@@ -66,8 +66,16 @@
         &-add{
             display: flex;
             align-items: center;
+            flex-direction: column;
             gap: 15px;
+            width: 100%;
+            .SmallTextEditor {
+                width: 100%;
+            }
         }
+    }
+    .ql-editor {
+        min-height: 150px;
     }
 }
 // @media screen and (max-width:400px){
